# kikobot-robotic-arm

./: README.md
eyantra_warehouse/launch/: start_world.launch.py  task3a.launch.py  task4c.launch.py
eyantra_warehouse/worlds/: eyantra_warehouse_task4.world
mesko_hardware/: CMakeLists.txt  mesko_hardware.xml  package.xml  test_wifi.cpp
mesko_hardware/arduino_codes/mesko_code/: mesko_code.ino
mesko_hardware/arduino_codes/mesko_wifi/: mesko_wifi.ino
mesko_hardware/config/: blue_arm.rviz  display.rviz  hardware_controller.yaml
mesko_hardware/include/mesko_hardware/: arduino_comms.hpp  mesko_hardware.hpp  mesko_hardware_wifi.hpp  visibility_control.h  wifi_comms.hpp
mesko_hardware/launch/: mesko_hardware.launch.py
mesko_hardware/scripts/: ex_servo.py  hardware_pick_and_place.py
mesko_hardware/src/: mesko_hardware.cpp
mesko_hardware/urdf/: meskobot.xacro  realsense2.xacro  ros2_control.xacro
meskobot_description/: package.xml  setup.cfg  setup.py
meskobot_description/config/: bot_controller.yaml  display.rviz  joint_limits.yaml
meskobot_description/launch/: display.launch.py  gazebo.launch.py
meskobot_description/meshes/: base_link.stl  elbow_link_1.stl  end_eff_v1_1.stl  shoulder_lnk_1.stl  wrist_link_1.stl  wrist_link_2_1.stl  wrist_link_3_1.stl
meskobot_description/urdf/: materials.xacro  meskobot.gazebo  meskobot.trans  meskobot.xacro  ros2_control.xacro
meskobot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
meskobot_moveit/config/: arm_servo.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  meskobot.ros2_control.xacro  meskobot.srdf  meskobot.urdf.xacro  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
meskobot_moveit/launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
meskobot_scripts/: CMakeLists.txt  ik_sol_handler.cpp  package.xml
meskobot_scripts/scripts/: cam_feed.py  hardware_pick_and_place.py  ik_wrapper.py  llm_client.py  object_detect.py  pick_and_place.py
meskobot_scripts/src/: ik.cpp  ik_publisher.cpp  ik_service.cpp
meskobot_scripts/srv/: Sol.srv
pymoveit2/examples/: ex_fk.py  ex_ik.py  ex_joint_goal.py  ex_pose_goal.py  ex_servo.py
